kustomize/base/globex-apim-user1-route-globex-mobile.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: globex-mobile
  namespace: globex-apim-user1
  labels:
    app.kubernetes.io/name: globex-mobile
    app.kubernetes.io/instance: globex-user1
    app.kubernetes.io/version: "latest"
spec:
  to:
    kind: Service
    name: globex-mobile
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
